--- a/templates/index.html
+++ b/templates/index.html
@@ -3,28 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFC 데이터</title>
+    <title>💥ONLYONE FAIR</title>
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1 id="page-title">NFC 데이터</h1>
-        <div id="nfc-data" class="nfc-data">대기 중...</div>
+        <div class="title-container">
+            <div class="title">
+                <h1 id="title">Heading Style Five</h1>
+            </div>
+            <div class="clock">
+                <h2 id="clock">00:00:00</h2>
+                <p id="future-time">08:00 후 시각: --:--:--</p>
+                <p id="time-difference">남은 시간: --:--:--</p>
+            </div>
+        </div>
+        <hr class="hr-14">
+        <div class="comment">
+          <h1 id="comment"> Heading Style Five </h1>
+        </div>
+        <hr class="hr-14">
+        <div class="square-container">
+            <div class="score" id="acc_score">
+                <h1>Heading Style Five</h1>
+            </div>
+            <div class="photo" id="photo">
+                <h1>Heading Style Five</h1>
+            </div>
+        </div>
     </div>
-
-    <script>
-        // Socket.IO 클라이언트 연결
-        const socket = io();
-
-        // 서버로부터 'nfc_data' 이벤트를 수신했을 때 실행되는 함수
-        socket.on('nfc_data', function(data) {
-            // 제목 변경
-            document.getElementById('page-title').innerText = 'NFC 데이터 수신 완료';
-
-            // 수신된 데이터를 HTML 요소에 표시
-            document.getElementById('nfc-data').innerText = `NFC 데이터: ${data.data}`;
-        });
-    </script>
+    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
+    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
 </html>
