[fix] 스크립트 로딩 성능 개선 1차

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
     <title>💥ONLYONE FAIR</title>
     <link rel="icon" href="https://www.veryicon.com/icons/miscellaneous-icon/icon-heart.html" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -33,7 +32,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
-    <script src="{{ url_for('static', filename='scripts.js') }}"></script>
+    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" defer></script>
+    <script src="{{ url_for('static', filename='scripts.js?v=1.0.0') }}" defer></script>
 </body>
 </html>
