--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💥ONLYONE FAIR</title>
-    <link rel="icon" href="https://www.veryicon.com/icons/miscellaneous-icon/icon-heart.html" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -33,6 +32,6 @@
         </div>
     </div>
     <script src="https://cdn.socket.io/4.3.2/socket.io.min.js" defer></script>
-    <script src="{{ url_for('static', filename='scripts.js?v=1.0.0') }}" defer></script>
+    <script src="{{ url_for('static', filename='scripts.js') }}" defer></script>
 </body>
 </html>
