[feat] 디지털 비전보트 미션 수행 포인트 기능, 일부 문구 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="title-container">
             <div class="title">
-                <h1 id="title">Heading Style Five</h1>
+                <h1 id="title">소속사, 이름</h1>
             </div>
             <div class="clock">
                 <h2 id="clock">00:00:00</h2>
@@ -19,15 +19,15 @@
         </div>
         <hr class="hr-14">
         <div class="comment">
-          <h1 id="comment"> Heading Style Five </h1>
+          <h1 id="comment"> 상세 안내 </h1>
         </div>
         <hr class="hr-14">
         <div class="square-container">
             <div class="score" id="acc_score">
-                <h1>Heading Style Five</h1>
+                <h1>현재까지 받은 포인트</h1>
             </div>
             <div class="photo" id="photo">
-                <h1>Heading Style Five</h1>
+                <h1>사용가능한 촬영권</h1>
             </div>
         </div>
     </div>
