--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="title-container">
             <div class="title">
-                <h1 id="title"> {{scr_dto.peer_company}}<br> {{scr_dto.peer_name}}님, {{scr_dto.enter_dvcd}}</h1>
+                <h1 id="title"> {{peer_company}}<br> {{peer_name}}님, {{enter_dvcd}}</h1>
             </div>
             <div class="clock">
                 <h2 id="clock">00:00:00</h2>
@@ -19,15 +19,15 @@
         </div>
         <hr class="hr-14">
         <div class="comment">
-          <h1 id="comment">{{scr_dto.comment}}</h1>
+          <h1 id="comment">{{comment}}</h1>
         </div>
         <hr class="hr-14">
         <div class="square-container">
             <div class="score" id="acc_score">
-                <h1>현재까지 받은 포인트<br><br> {{scr_dto.acc_score}} (+{{scr_dto.current_score}})</h1>
+                <h1>현재까지 받은 포인트<br><br> {{acc_score}} (+{{current_score}})</h1>
             </div>
             <div class="photo" id="photo">
-                <h1>촬영권<br><br>{{scr_dto.photo}}</h1>
+                <h1>촬영권<br><br>{{photo}}</h1>
             </div>
         </div>
     </div>
