[fix] 문구 수정 (표시)

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="title-container">
             <div class="title">
-                <h1 id="title"> {{scr_dto.peer_company}}<br> {{scr_dto.peer_name}}님, {{scr_dto.enter_dvcd}}</h1>
+                <h1 id="title"> {{scr_dto.peer_company}}<br> {{scr_dto.peer_name}}, {{scr_dto.enter_dvcd}}</h1>
             </div>
             <div class="clock">
                 <h2 id="clock">00:00:00</h2>
@@ -24,7 +24,7 @@
         <hr class="hr-14">
         <div class="square-container">
             <div class="score" id="acc_score">
-                <h1>현재까지 받은 포인트<br><br> {{scr_dto.acc_score}} (+{{scr_dto.current_score}})</h1>
+                <h1>현재까지 받은 포인트<br><br> {{scr_dto.acc_score}} {{scr_dto.current_score}}</h1>
             </div>
             <div class="photo" id="photo">
                 <h1>촬영권<br><br>{{scr_dto.photo}}</h1>
@@ -37,7 +37,7 @@
         // 페이지 로드 후 5초 뒤에 메인 페이지로 리다이렉트
         setTimeout(function() {
             window.location.href = "/";
-        }, 3000);
+        }, 5000);
     </script>
 </body>
 </html>
