--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
         <div class="comment">
             <h1>
                 <form action="{{ url_for('submit_serial_number') }}" method="POST">
-                    <input type="text" id="serial-number" name="serial-number" placeholder="키보드로 입력하기" required>
+                    <input type="number" id="serial-number" name="serial-number" placeholder="(예시:836709)" required>
                     <button type="submit">GO!</button>
                 </form>
             </h1>
